Bugfix/eidomni 225 (#82)
* fix(EIDOMNI-225) : fix nullpointer and add validation

* chore(EIDOMNI-225) : update openapi.yaml file

* chore(EIDOMNI-225) : add correct json property to field to prevent breaking changes

* chore(EIDOMNI-225) : fix code ql finding

* chore(EIDOMNI-225) : fix cves
